resolve kind-of >= 6.0.3
Fixes [CVE-2019-20149](https://github.com/advisories/GHSA-6c8f-qphg-qjgp)

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "webpack-dev-server": "^3.10.3"
   },
   "resolutions": {
-    "minimist": "^1.2.2"
+    "minimist": "^1.2.2",
+    "kind-of": "^6.0.3"
   },
   "standard": {
     "globals": [
