--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "minimist": "^1.2.2",
     "node-forge": "^0.10.0",
     "normalize-url": "^4.5.1",
+    "nth-check": "^2.0.1",
     "serialize-javascript": "^3.1.0",
+    "set-value": "^4.0.1",
     "ssri": "^8.0.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.8.0"
