--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,7 +32,8 @@ RUN apk --no-cache add --upgrade --virtual build-dependencies \
                   postgresql-dev \
                   tzdata \
                   runit \
-                  apk-tools
+                  apk-tools \
+                  gmp=6.2.1-r1
 
 # add non-root user and group with alpine first available uid, 1000
 RUN addgroup -g 1000 -S appgroup \
